Add labels. Flesh out examples page

--- a/css/svg.css
+++ b/css/svg.css
@@ -1,10 +1,28 @@
 /* SVG styling */
 svg {
-	width: 300px;
+	width: 960px;
 	height: 300px;
 }
-
+#energychart svg, #chart3 svg {
+	height: 360px;
+}
+#chart4 svg {
+	height: 470px;
+}
 path {
 	stroke: #777;
 	stroke-width: 0.1px;
+}
+
+.labels {
+	fill: #aaa;
+	font-weight: 200;
+	letter-spacing: -1px;
+}
+.labels.segment {
+	font-size: 10px;
+}
+
+#chart3 .labels {
+	fill: #555;
 }
