--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 /* Document styling */
 body {
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	width: 960px;
 	margin: 0 auto;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
+	line-height: 20px;
+}
+section {
+	margin-bottom: 40px;
 }
 h1 {
 	font-size: 40px;
@@ -11,9 +15,21 @@ h1 {
 	letter-spacing: -2px;
 	margin: 1em 0 0.5em 0;
 }
+h2 {
+	font-weight: 300;
+}
+a {
+	color: #0088cc;
+	text-decoration: none;
+}
+a:hover {
+	color: #005580;
+	text-decoration: underline;
+}
 #info {
 	height: 20px;
 }
+
 footer {
 	margin: 50px 0 30px 0;
 }
